@@ -1399,6 +1399,11 @@ purple_request_action_with_icon_varg(void *handle, const char *title,
 		handles = g_list_append(handles, info);
 
 		return info->ui_handle;
+	} else {
+		/* Fall back on the non-icon request if the UI doesn't support icon
+		 requests */
+		return purple_request_action_varg(handle, title, primary, secondary,
+			default_action, account, who, conv, user_data, action_count, actions);
 	}
 
 	return NULL;
